--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Kridsanapong Daihentob</title>
+ <style>
+body{
+  background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(155,229,245,0.6082808123249299) 100%, rgba(250,221,228,1) 100%);
+}
+ </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
